# xmlcv

./: CHANGELOG.md  MANIFEST.in  README.md  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  python-app.yml
examples/: basic_usage.py
xmlcv/: __init__.py  cli.py  config.py  converter.py  converter_v2.py  element_processor.py  processors.py
xmlcv/plugins/: __init__.py  base.py  docx_plugin.py  html_plugin.py  markdown_plugin.py  pdf_plugin.py  pptx_plugin.py
