[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmlcv"
version = "0.1.0"
description = "A flexible XML to document converter with dynamic element processing and plugin system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Trung Nghia Hoang", email = "trunghia.hoang@gmail.com"},
]
keywords = ["xml", "html", "converter", "document", "format"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Text Processing :: Markup :: HTML",
]

dependencies = [
    "lxml>=4.9.0",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=59.0",
]
pdfkit = [
    "pdfkit>=1.0.0",
]
docx = [
    "python-docx>=1.0.0",
]
pptx = [
    "python-pptx>=0.6.0",
]
markdown = [
    "markdown>=3.4.0",
]
all = [
    "weasyprint>=59.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.0",
    "markdown>=3.4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/trunghiahoang/xmlcv"
Documentation = "https://github.com/trunghiahoang/xmlcv#readme"
Repository = "https://github.com/trunghiahoang/xmlcv"
"Bug Tracker" = "https://github.com/trunghiahoang/xmlcv/issues"
Changelog = "https://github.com/trunghiahoang/xmlcv/blob/main/CHANGELOG.md"

[project.scripts]
xmlcv = "xmlcv.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xmlcv*"]

